# pet_fastapi

./: db.sqlite3  items_views.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  views.py
core/models/: __init__.py  base.py  db_helper.py
users/: crud.py  views.py
