[tool.poetry]
name = "pet-proj"
version = "0.1.0"
description = ""
authors = ["3ef1rus <ivanvyal321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
unicorn = {extras = ["standart"], version = "^2.1.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
